Latihan CSS GRID/Shared/NavMenu.razor.css
.title {
    /*margin: 1em;*/
    align-items: center;
    margin-left: 1rem;
    flex: 2;
    border: 1px solid black;
}

.hamburger {
    display: none;
    margin: 1rem;
    height: 30px;
    width: 30px;
    border: 1px solid black;
    cursor: pointer;
    justify-content: space-between;
}

    .hamburger .closed {
        display: flex;
        flex: 1;
        flex-direction: column;
        justify-content: space-between;
    }

    .hamburger span{
        display: block;
        width: 28px;
        height: 3px;
        background-color: aliceblue;
        transition: all 0.5s;
    }

        .hamburger span:first-child {
            transform-origin: left;
        }

        .hamburger span:last-child {
            transform-origin: left;
        }

    .hamburger .collapsed{
        justify-content: space-between;
    }

        .hamburger .collapsed span:first-child {
            transform: translate(5px, 2px) rotate(45deg);
            transition: all 0.5s;
        }

        .hamburger .collapsed span:last-child {
            transform: translate(5px, 16px) rotate(-45deg);
            transition: all 0.1s;
        }

        .hamburger .collapsed span:nth-child(2) {
            transform: translateY(12px) scale(0);
            transition: all 0.5s;
        }

.nav-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    color: antiquewhite;
    background-color: mediumslateblue;
    justify-content:  space-between;
    align-items: center;
}

    .nav-container ul {
        display: flex;
        list-style: none;
        text-decoration: none;
        align-items: stretch;
        padding: 20px;
        justify-content: space-between;
        background-color: inherit;
        font-size: 0.8em;
    }

    .nav-container ul li {
        background-color: #808080;
        margin: 0.5rem;
        padding: 10px;
    }

    .nav-container ul li a {
        color: inherit;
        text-align: center;
        text-decoration: none;
    }

/* Ukuran layar handphone */
@media screen and (max-width: 690px){
    .hamburger {
        display: flex;
        z-index: 999;
    }

    .nav-container {
    }

    .nav-container ul{
        display: none;
        position: absolute;
        top: 10vh;
        width: 100vw;
        justify-content: center;
    }

        .nav-container .collapse {
            display: flex;
            flex-wrap: wrap;
            flex-direction: column;
            justify-content: center;
            transition: all 1s;
        }
}

/* Ukuran layar lebih dari tablet */
@media screen and (min-width: 768.2px){
    
}

